<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:foreground="?android:attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F5F5F5">

            <View
                android:id="@+id/layoutDividerTop"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageValue"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="10dp"
                android:contentDescription="@string/descr_image"
                android:background="@drawable/image_border"
                app:layout_constraintStart_toEndOf="@+id/episodesTitle"
                app:layout_constraintStart_toStartOf="@+id/titleValue"
                app:layout_constraintTop_toBottomOf="@+id/titleValue"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/episodesValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@string/info_episodes"
                app:layout_constraintStart_toEndOf="@+id/episodesTitle"
                app:layout_constraintTop_toTopOf="@+id/episodesTitle" />

            <TextView
                android:id="@+id/episodesTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="1dp"
                android:text="@string/info_episodes"
                app:layout_constraintStart_toStartOf="@+id/guidelineMiddle"
                app:layout_constraintTop_toTopOf="@+id/imageValue" />

            <TextView
                android:id="@+id/airingValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_ongoing"
                app:layout_constraintStart_toStartOf="@+id/episodesValue"
                app:layout_constraintTop_toTopOf="@+id/scoreValue" />

            <TextView
                android:id="@+id/scoreValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/info_score"
                app:layout_constraintStart_toStartOf="@+id/episodesTitle"
                app:layout_constraintTop_toBottomOf="@+id/episodesTitle" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:fillViewport="true"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@+id/layoutDividerBottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageValue">

                <TextView
                    android:id="@+id/synopsisValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="5">

                </TextView>
            </ScrollView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineMiddle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.41" />

            <TextView
                android:id="@+id/titleValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/info_title"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/imageValue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <View
                android:id="@+id/layoutDividerBottom"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/urlValue"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:autoLink="web"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:backgroundTint="@color/teal_200"
                android:textSize="0sp"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:icon="@drawable/ic_link_24"
                app:iconSize="34dp"
                app:layout_constraintStart_toStartOf="@+id/scoreValue"
                app:layout_constraintTop_toBottomOf="@+id/scoreValue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/infoValue"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:backgroundTint="@color/teal_200"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="0sp"
                app:icon="@drawable/ic_info_24"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:iconSize="34dp"
                app:layout_constraintStart_toStartOf="@+id/airingValue"
                app:layout_constraintTop_toTopOf="@+id/urlValue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>